--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,6 @@
 
         .text-glow { text-shadow: 0 0 20px rgba(255,255,255,0.3); }
 
-        /* Animation for Toast */
         @keyframes slideIn {
             from { transform: translateX(100%); opacity: 0; }
             to { transform: translateX(0); opacity: 1; }
@@ -71,8 +70,32 @@
     </style>
 </head>
 <body class="h-screen overflow-hidden flex selection:bg-indigo-500 selection:text-white">
-    <div id="toast-container" class="fixed bottom-6 right-6 z-50 flex flex-col gap-4"></div>
+    
+    <svg style="display: none;">
+        <symbol id="icon-smartpause" viewBox="0 0 40 40">
+            <defs>
+                <linearGradient id="smart_grad" x1="0" y1="0" x2="40" y2="40" gradientUnits="userSpaceOnUse">
+                    <stop stop-color="#7C3AED" />
+                    <stop offset="1" stop-color="#4F46E5" />
+                </linearGradient>
+            </defs>
+            <rect width="40" height="40" rx="12" fill="url(#smart_grad)" />
+            <path d="M14 12H18V28H14V12ZM22 12H26V28H22V12Z" fill="white" fill-opacity="0.9"/>
+        </symbol>
 
+        <symbol id="icon-savings" viewBox="0 0 32 32">
+            <defs>
+                <linearGradient id="save_grad" x1="0" y1="0" x2="32" y2="32" gradientUnits="userSpaceOnUse">
+                    <stop stop-color="#10B981" />
+                    <stop offset="1" stop-color="#059669" />
+                </linearGradient>
+            </defs>
+            <rect width="32" height="32" rx="8" fill="url(#save_grad)" />
+            <path d="M16 8V24M8 16H24M21 11L23 9M11 21L9 23" stroke="white" stroke-width="2.5" stroke-linecap="round"/>
+        </symbol>
+    </svg>
+
+    <div id="toast-container" class="fixed bottom-6 right-6 z-50 flex flex-col gap-4"></div>
     <div id="app" class="w-full h-full flex"></div>
     
     <script src="app.js"></script>
